# VMTranslator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Command/: CodeWriter.cpp  CodeWriter.h  Parser.cpp  Parser.h
Helper/: Usage.cpp  Usage.h
IO_Helper/: Helper.cpp  Helper.h  InputHelper.cpp  InputHelper.h  OutputHelper.cpp  OutputHelper.h
Logger/: ErrorLogger.cpp  ErrorLogger.h  Logger.cpp  Logger.h
